--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,7 +14,7 @@ $purple: #5837e7;
 $lightPurple: #b06eff;
 $bgButtonTag: #F4EEFF;
 $colorButtonTag: #AF9EFC;
-
+$pink: #e73782;
 // RESPONSIVE
 @mixin responsivo($rl, $rl2: 1) {
     @if ($rl2  !=1) {
