--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -42,6 +42,7 @@
 
 .btnSubmit {
     text-align: center;
+
     button {
         background-color: $purple;
         font-weight: 700;
@@ -57,6 +58,7 @@
         color: #fff;
         opacity: .6;
         @include anima-slow;
+
         .line {
             margin: 0 10px;
         }
@@ -69,7 +71,7 @@
 }
 
 .btn_cadastre {
-    
+
     a {
         background-color: $purple;
         font-size: 0.875rem;
@@ -88,7 +90,6 @@
 }
 
 .btn_register {
-    margin-bottom: 60px;
     a {
         background-color: $purple;
         font-size: 0.875rem;
@@ -119,4 +120,57 @@
             color: $lightPurple;
         }
     }
+}
+
+.btn_submit {
+    button {
+        background-color: $purple;
+        font-weight: 700;
+        font-size: 1rem;
+        border-radius: 30px;
+        padding: 15px 55px;
+        margin: 20px auto 20px auto;
+        border: 0;
+        letter-spacing: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #fff;
+        @include anima-slow;
+
+        &:hover {
+            @include anima-slow;
+            background-color: $lightPurple;
+        }
+    }
+}
+
+.btn_cancel {
+    button {
+        background-color: $pink;
+        font-weight: 700;
+        font-size: 1rem;
+        border-radius: 30px;
+        padding: 15px 55px;
+        margin: 20px auto 20px auto;
+        border: 0;
+        letter-spacing: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #fff;
+        @include anima-slow;
+
+        &:hover {
+            @include anima-slow;
+            background-color: $lightPurple;
+        }
+    }
+}
+
+.btns {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
