--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -1,3 +1,7 @@
+#dashboard__body {
+    background: #f2f2f2;
+}
+
 .content__dashboard {
     display: flex;
     flex-wrap: wrap;
@@ -163,6 +167,18 @@
     }
 }
 
+@media (min-width: 1750px) {
+    .content__dashboard {
+        .column_sidebar {
+            @include make-col(1.5);
+        }
+
+        .column_nav {
+            @include make-col(10.5);
+        }
+    }
+}
+
 .content_middle_dashboard {
     padding: 50px 0px;
 
@@ -301,6 +317,7 @@
     }
 
     .album {
+        margin: 0 auto;
         margin-top: 5rem;
         background-color: #fff;
 
