--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11792,6 +11792,10 @@ form .collapse_filter .activeFilter {
     font-size: 1rem;
   }
 }
+#dashboard__body {
+  background: #f2f2f2;
+}
+
 .content__dashboard {
   display: flex;
   flex-wrap: wrap;
@@ -11907,6 +11911,16 @@ form .collapse_filter .activeFilter {
     margin: 0 10px 0 0;
   }
 }
+@media (min-width: 1750px) {
+  .content__dashboard .column_sidebar {
+    flex: 0 0 auto;
+    width: 12.5%;
+  }
+  .content__dashboard .column_nav {
+    flex: 0 0 auto;
+    width: 87.5%;
+  }
+}
 .content_middle_dashboard {
   padding: 50px 0px;
 }
@@ -12017,6 +12031,7 @@ form .collapse_filter .activeFilter {
   margin: 30px 0;
 }
 .content_middle_dashboard .album {
+  margin: 0 auto;
   margin-top: 5rem;
   background-color: #fff;
 }
