--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -153,7 +153,7 @@
                         background: #F6F4FF;
                         border-left: 6px solid $purple;
                         border-radius: 10px;
-                        padding: 14px;
+                        padding: 14px 5px;
 
                         a {
                             img {
