--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -29,7 +29,6 @@
                     margin-bottom: 30px;
 
                     a {
-                        font-size: 1.125rem;
                         color: $anotherGray;
                         font-weight: bold;
                         display: flex;
@@ -153,7 +152,7 @@
                         background: #F6F4FF;
                         border-left: 6px solid $purple;
                         border-radius: 10px;
-                        padding: 14px 5px;
+                        padding: 14px 5px 14px 14px;
 
                         a {
                             img {
@@ -175,6 +174,18 @@
 
         .column_nav {
             @include make-col(10.5);
+        }
+
+        .sidebar {
+            nav {
+                ul {
+                    li {
+                        a {
+                            font-size: 1.125rem;
+                        }
+                    }
+                }
+            }
         }
     }
 }
