--- a/resources/sass/_faq.scss
+++ b/resources/sass/_faq.scss
@@ -11,6 +11,7 @@
             font-size: 2rem;
             font-weight: 900;
             margin-top: 15px;
+
             span {
                 color: $lightPurple;
             }
@@ -19,16 +20,66 @@
 
     .duvidas {
         margin: 50px auto;
+
         ul {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+
             li {
                 margin: 20px 0;
+
+                .takeItem {
+                    border-bottom: 2px solid #EBEBEB;
+
+                }
+
                 .title {
                     color: $black;
                     font-weight: 800;
                     font-size: 1.125rem;
+
+                    button {
+                        width: 100%;
+                        border: 0;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        background: none;
+                        color: $black;
+                        outline: 0;
+                        font-size: 1rem;
+                        font-weight: bold;
+                        padding: 10px 0;
+
+                        span {
+                            @include anima-slow;
+                        }
+                    }
+
+                    .activebtn {
+                        background-color: #F2F1FB;
+                        padding: 20px 10px 0 10px;
+                        color: #B06EFF;
+
+                        span {
+                            @include anima-slow;
+                            transform: rotate(180deg);
+                        }
+                    }
+                }
+
+                .content {
+                    display: none;
+                    padding: 30px 10px;
+                    color: $anotherGray;
+                    font-weight: 550;
+                }
+
+                .active_content {
+                    display: block;
+                    background-color: #F2F1FB;
+
                 }
             }
         }
@@ -43,5 +94,33 @@
                 font-size: 2.8rem;
             }
         }
+
+    }
+
+}
+
+@media (min-width: map-get($grid-breakpoints, lg)) {
+    .default_page {
+        padding: 80px 0 50px 0;
+    }
+
+    .faq {
+        .duvidas {
+            ul {
+                li {
+                    .title {
+                        button {
+                            font-size: 1.25rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@include responsivo(1500, 4600) {
+    .default_page {
+        padding: 200px 0 50px 0;
     }
 }
