--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12406,12 +12406,22 @@ form .collapse_filter .activeFilter {
   padding: 80px 0;
 }
 
+.all_cards_result {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 50px 0;
+}
+
 .card_item {
   background-color: #fff;
   margin-bottom: 40px;
 }
 .card_item .card-img-top {
   border-radius: 30px 30px 0 0;
+}
+.card_item .takeCard {
+  padding: 0 10px;
 }
 .card_item .card-body {
   box-shadow: 0 8px 15px -1px rgba(0, 0, 0, 0.1);
