--- a/resources/sass/_result.scss
+++ b/resources/sass/_result.scss
@@ -1,12 +1,21 @@
 .result_search {
     padding: 80px 0;
 }
-
+.all_cards_result {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 50px 0;
+}
 .card_item {
     background-color: #fff;
     margin-bottom: 40px;
     .card-img-top {
         border-radius: 30px 30px 0 0;
+    }
+
+    .takeCard {
+        padding: 0 10px;
     }
 
     .card-body {
@@ -37,4 +46,4 @@
             }
         }
     }
-} 
+}
