--- a/resources/sass/_login.scss
+++ b/resources/sass/_login.scss
@@ -11,7 +11,7 @@
         padding: 50px 20px;
         display: flex;
         flex-wrap: wrap;
-
+        box-shadow: 0 15px 22px 0px rgba(0,0,0,.1);
         .icon_guia_van {
             margin-bottom: 30px;
         }
