--- a/resources/sass/_formulario.scss
+++ b/resources/sass/_formulario.scss
@@ -20,6 +20,10 @@ form {
         @include anima-slow;
     }
 
+    textarea {
+        height: 160px;
+    }
+
     ::placeholder {
         /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: $gray;
