--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11058,6 +11058,124 @@ table {
 .header .row {
   align-items: center;
 }
+.header .logo img {
+  transition: all 0.3s linear;
+}
+.header .logo_invert {
+  position: fixed;
+  z-index: 502;
+  top: 3rem;
+}
+.header .logo_invert img {
+  transition: all 0.3s linear;
+  filter: brightness(0) invert(1);
+}
+
+.menu_mobile .menu_hamburger {
+  --front: #275EFE;
+  --back: #D93757;
+  --icon: white;
+  perspective: 600px;
+  width: 48px;
+  height: 48px;
+  position: fixed;
+  top: 4rem;
+  right: 30px;
+  z-index: 501;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+.menu_mobile .menu_hamburger input {
+  display: none;
+}
+.menu_mobile .menu_hamburger input + div span {
+  --rotateY: 0deg;
+  --background: var(--front);
+  transform: rotateY(var(--rotateY));
+  transform-style: preserve-3d;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: var(--background);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transition: transform 0.6s cubic-bezier(0.2, 0.64, 0.48, 1.24);
+}
+.menu_mobile .menu_hamburger input + div span:before, .menu_mobile .menu_hamburger input + div span:after {
+  --rotate: 0deg;
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  border-radius: 1px;
+  top: 50%;
+  left: 50%;
+  background: var(--icon);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transform: translate(-50%, -50%) rotate(var(--rotate)) translateZ(6px);
+}
+.menu_mobile .menu_hamburger input + div span:first-child {
+  --background: var(--back);
+}
+.menu_mobile .menu_hamburger input + div span:first-child:before {
+  --rotate: -45deg;
+}
+.menu_mobile .menu_hamburger input + div span:first-child:after {
+  --rotate: 45deg;
+}
+.menu_mobile .menu_hamburger input + div span:last-child {
+  --rotateY: 180deg;
+}
+.menu_mobile .menu_hamburger input + div span:last-child:before {
+  box-shadow: 0 -5px 0 var(--icon), 0 5px 0 var(--icon);
+}
+.menu_mobile .menu_hamburger input + div span:last-child:after {
+  display: none;
+}
+.menu_mobile .menu_hamburger input:checked + div span:first-child {
+  --rotateY: -180deg;
+}
+.menu_mobile .menu_hamburger input:checked + div span:last-child {
+  --rotateY: 0deg;
+}
+.menu_mobile .content_menu {
+  background-color: #5837e7;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 500;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s linear;
+}
+.menu_mobile .content_menu ul {
+  text-align: center;
+}
+.menu_mobile .content_menu ul li {
+  margin-bottom: 30px;
+}
+.menu_mobile .content_menu ul li a {
+  letter-spacing: 1.2px;
+  font-size: 1.45rem;
+  font-weight: bold;
+  color: #fff;
+}
+.menu_mobile .content_menu ul .button_account {
+  background-color: #e73782;
+}
+.menu_mobile .content_menu ul .button_account a {
+  font-size: 1rem;
+}
+.menu_mobile .open_menu {
+  display: flex;
+}
 
 .menu_desktop {
   display: none;
@@ -11068,6 +11186,7 @@ table {
   justify-content: space-between;
 }
 .menu_desktop ul li a {
+  letter-spacing: 1.2px;
   font-weight: 900;
   color: #4E4E4E;
   transition: all 0.3s linear;
@@ -11090,6 +11209,9 @@ table {
 }
 
 @media (min-width: 992px) {
+  .menu_mobile {
+    display: none;
+  }
   .menu_desktop {
     display: block;
   }
@@ -11591,6 +11713,17 @@ form .collapse_filter .activeFilter {
     font-size: 0.875rem;
   }
 }
+.formulario_pages .itemInput {
+  margin-bottom: 30px;
+}
+.formulario_pages .itemInput label {
+  justify-content: flex-start;
+  margin-bottom: 5px;
+}
+.formulario_pages .itemInput textarea {
+  width: 97%;
+}
+
 .cadastre_se:before {
   content: "";
   display: block;
@@ -11816,6 +11949,7 @@ form .collapse_filter .activeFilter {
   display: none;
   padding: 30px 10px;
   color: #4E4E4E;
+  line-height: 1.6;
   font-weight: 550;
 }
 .faq .duvidas ul li .active_content {
