--- a/resources/sass/_faq.scss
+++ b/resources/sass/_faq.scss
@@ -73,6 +73,7 @@
                     display: none;
                     padding: 30px 10px;
                     color: $anotherGray;
+                    line-height: 1.6;
                     font-weight: 550;
                 }
 
