--- a/resources/sass/_result.scss
+++ b/resources/sass/_result.scss
@@ -1,15 +1,19 @@
 .result_search {
     padding: 80px 0;
 }
+
 .all_cards_result {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     padding: 50px 0;
 }
+
 .card_item {
     background-color: #fff;
     margin-bottom: 40px;
+    padding: 0 10px;
+
     .card-img-top {
         border-radius: 30px 30px 0 0;
     }
@@ -19,9 +23,10 @@
     }
 
     .card-body {
-        box-shadow: 0 8px 15px -1px rgba(0,0,0,.1);
+        box-shadow: 0 8px 15px -1px rgba(0, 0, 0, .1);
         padding: 30px 20px;
         border-radius: 0 0 20px 20px;
+
         .card-title {
             text-transform: uppercase;
             font-weight: bold;
@@ -33,12 +38,15 @@
             color: $anotherGray;
             font-weight: 550;
             margin-bottom: 10px;
+
             span {
                 font-weight: bold;
             }
+
             a {
                 color: $purple;
                 @include anima-slow;
+
                 &:hover {
                     @include anima-slow;
                     color: $lightPurple;
